--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^7.2.0
   shared_preferences: 2.2.0
   google_fonts: any
+  intl: any
 
 dev_dependencies:
   flutter_test:
